--- a/DAY1/자코모.html
+++ b/DAY1/자코모.html
@@ -38,14 +38,23 @@
         
         p {
             font-size: 35px;
+            text-align: center;
+            
         }
 
         h2 {
             font-size: 10px;
+            text-align: center;
+        }
+
+        .content:hover {
+            background-size: cover;
+            flex-shrink: 0;
+            transition: 0.4s;
         }
 
         .text {
-            /* display: flex; */
+            z-index: 1;
         }
     </style>
 </head>
@@ -69,7 +78,7 @@
             <div class="text">
                 <p>Material</p>
                 <h2>올바른 내장재</h2>
-            </div>
+        </div>
         </div>
     </section>
 </body>
