--- a/DAY1/자코모.html
+++ b/DAY1/자코모.html
@@ -6,6 +6,11 @@
     <title>자코모</title>
   
     <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
+        
         section {
             width: 100%;
             display: flex;
@@ -52,6 +57,7 @@
 
         .text {
             z-index: 1;
+           
         }
     </style>
 </head>
