--- a/DAY2/시맨틱실습.html
+++ b/DAY2/시맨틱실습.html
@@ -28,6 +28,10 @@
             padding: 10px;
         }
 
+        h2 {
+            margin: 10px;
+        }
+
         .relative {
             border: 1px solid#000;
             margin: 10px;
@@ -41,46 +45,46 @@
         <h1>logo</h1>
         <nav>
             <ul class="relative">
-                <p>옆집에 고양이가 침입했다!</p>
+                <h2>옆집에 고양이가 침입했다!</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Non perspiciatis, nostrum aperiam accusamus asperiores aliquid tenetur reprehenderit 
-                    voluptates laborum quisquam aliquam distinctio! Officia eius, vitae nostrum est nobis a. Quod!</p>
+                    Tempora consequuntur vel deserunt autem eos. Nisi odio quibusdam asperiores nesciunt provident natus minima aliquid, 
+                    quaerat corrupti, ipsa facere, harum consequuntur fugiat.</p>
             </ul>
 
             <ul class="relative">
-                <p>바다에서 쉬고있는 점박이물범!</p>
+                <h2>바다에서 쉬고있는 점박이물범!</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Doloremque praesentium blanditiis perferendis impedit. 
-                    Consequatur dolorum accusantium, reprehenderit nihil fuga, 
-                    odio vero illo cumque, repellat sapiente non a. Cum, quidem fugit?</p>
+                    Officia tempora maxime distinctio labore nam blanditiis laborum aspernatur quam ratione aliquid suscipit delectus consequatur, 
+                    vero consequuntur natus recusandae ea quis rerum.</p>
             </ul>
 
             <ul class="relative">
-                <p>건강을 지키는 생활습관 10가지</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Animi vel ullam ad expedita dolorem repudiandae molestiae reprehenderit soluta natus esse sit 
-                    nulla quae porro quod, harum recusandae assumenda suscipit dolorum?</p>
+                <h2>건강을 지키는 생활습관 10가지</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Similique, consequatur facilis perspiciatis, libero officiis, 
+                    minus inventore voluptas nulla quod voluptatum soluta non perferendis maxime expedita vero a quia labore ex!</p>
             </ul>
 
             <ul class="relative">
-                <p>아이돌커플탄생?!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil voluptas in quis ea corporis rerum, 
-                    voluptatum nostrum saepe recusandae ducimus aliquid voluptates eius ullam aliquam perferendis, 
-                    aspernatur repudiandae, animi labore.</p>
+                <h2>아이돌커플탄생?!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Nesciunt libero, culpa reprehenderit voluptates explicabo sint fugit soluta nihil pariatur voluptatum! 
+                    Itaque eveniet odit ipsam dolor cumque enim vero nemo. Deserunt?</p>
             </ul>
 
             <ul class="relative">
-                <p>종합영양제 과연 효과있을까?</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto distinctio ipsum consectetur deserunt? 
-                    Possimus et necessitatibus minima debitis, 
-                    exercitationem consequuntur ducimus sunt impedit quo temporibus itaque porro tempora error libero.</p>
+                <h2>종합영양제 과연 효과있을까?</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Error accusamus voluptate, quae totam dolore optio reiciendis eos. 
+                    Minima fugiat eos perferendis. Assumenda sint, aperiam ad fuga rerum eum at eaque.</p>
             </ul>
 
             <ul class="relative"> 
-                <p>수요일 직장인 피로도 99%라는 연구결과...</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, corrupti accusantium! 
-                    Obcaecati fuga cum maxime suscipit. Tempora ab laborum ipsa deleniti nostrum illo dolorem, 
-                    nesciunt officia mollitia dolores reiciendis maiores.</p>
+                <h2>수요일 직장인 피로도 99%라는 연구결과...</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Vel nisi, sapiente dolores eius est aperiam. 
+                    Nesciunt omnis veritatis repudiandae delectus, 
+                    officiis voluptas laboriosam sunt maxime voluptatem, at maiores perferendis nostrum.</p>
             </ul>
         </nav>
     </header>
