--- a/DAY2/시맨틱실습.html
+++ b/DAY2/시맨틱실습.html
@@ -10,6 +10,15 @@
             margin: 0;
         }
 
+        header {
+            width: 100%;
+            height: 80px;
+            display: flex;
+            background-color: aqua;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10 30px;
+        }
         
         h1 {
             background-color: pink;
