--- a/DAY8/media.html
+++ b/DAY8/media.html
@@ -16,6 +16,7 @@
             /* max-width란 max-width로 설정한 값이 최대값이라는 뜻
             즉 max-width 1024px은 1024보다 작은 화면을 뜻한다.
             1024가 최대값이라고 선언했으니 해당 코드는 1024보다 작을 때 작동 */
+            /* 화면이 줄어들때 사용 */
             .pc_media {
                 width: 100%;
             }
@@ -41,6 +42,7 @@
             브라우저의 사이즈가 작을 때 작동하는 반면에 
             min-width는 최소값을 지정해준거라서 우리가 지정한 최소값보다 클때 작동한다. */
             /* max-width / min-width 개념 중요!! */
+            /* 화면이 커질때 사용 */
             .mo_media {
             width: 100%;
             height: 300px;
